@@ -73,6 +73,13 @@ perform checksum verifications.
     check against the generated checksum.
     <td valign="top" align="center">No</td>
   </tr>
+  <tr>
+    <td valign="top">readbuffersize</td>
+    <td valign="top">The size of the buffer )in bytes) to use when
+    reading a file. Defaults to &quot;8192&quot; - you may get a
+    better performance on big files if you increase this value.</td>
+    <td valign="top" align="center">No</td>
+  </tr>
 </table>
 <h3>Parameters specified as nested elements</h3>
 
